enviroment/dev/infra/uptime/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: uptime-kuma.dev.pipelinebr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 80
  tls:
    - hosts:
        - uptime-kuma.dev.pipelinebr
      secretName: uptime-kuma-tls
